Fix rename everywhere

--- a/terrazzo-terminal/assets/index.html
+++ b/terrazzo-terminal/assets/index.html
@@ -6,7 +6,7 @@
     <title>Terrazzo</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/common.css" />
-    <link rel="stylesheet" href="/static/web-terminal.css" />
+    <link rel="stylesheet" href="/static/terrazzo-terminal.css" />
     <link rel="stylesheet" href="/static/xterm.css" />
     <script type="module" src="/static/xterm.js"></script>
     <script type="module" src="/static/xterm-addon-fit.js"></script>
