--- a/terminal/assets/index.html
+++ b/terminal/assets/index.html
@@ -11,6 +11,7 @@
     <script type="module" src="/static/xterm.js"></script>
     <script type="module" src="/static/xterm-addon-fit.js"></script>
     <script type="module" src="/static/xterm-addon-web-links.js"></script>
+    <script type="module" src="/static/codemirror.js"></script>
 </head>
 
 <body style="background-color: black; color: white;">
