--- a/terminal/assets/index.html
+++ b/terminal/assets/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="/static/common.css" />
     <link rel="stylesheet" href="/static/terrazzo-terminal.css" />
     <link rel="stylesheet" href="/static/xterm.css" />
-    <script type="module" src="/static/xterm.js"></script>
-    <script type="module" src="/static/xterm-addon-fit.js"></script>
-    <script type="module" src="/static/xterm-addon-web-links.js"></script>
-    <script type="module" src="/static/codemirror.js"></script>
+    <script type="module" src="/static/jsdeps.js"></script>
 </head>
 
 <body style="background-color: black; color: white;">
